force-app/main/default/objects/CCT_ProductName__mdt/CCT_ProductName__mdt.object-meta.xml
<CustomObject>
    <description>Entries of Product Name that would be used to generate a JSON to used on CompetitiveComplementaryTechnologyNewForm</description>
    <label>CCT Product Name</label>
    <pluralLabel>CCT Product Names</pluralLabel>
</CustomObject>