force-app/main/default/objects/CCT_ProductName__mdt/fields/Competitor_Name__c.field-meta.xml
<CustomField>
    <fullName>Competitor_Name__c</fullName>
    <label>Competitor Name</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Agilent</fullName>
                <isActive>false</isActive>
                <label>Agilent</label>
            </value>
            <value>
                <fullName>AXBIO</fullName>
                <isActive>false</isActive>
                <label>AXBIO</label>
            </value>
            <value>
                <fullName>BGI</fullName>
                <label>BGI/Innomics (Send-Out)</label>
            </value>
            <value>
                <fullName>Complete Genomics/MGI</fullName>
                <label>BGI/MGI/Complete Genomics (Instrument)</label>
            </value>
            <value>
                <fullName>Cygnus</fullName>
                <isActive>false</isActive>
                <label>Cygnus</label>
            </value>
            <value>
                <fullName>Element Biosciences</fullName>
                <label>Element</label>
            </value>
            <value>
                <fullName>Genemind</fullName>
            </value>
            <value>
                <fullName>GeneSense</fullName>
                <isActive>false</isActive>
                <label>GeneSense</label>
            </value>
            <value>
                <fullName>Geneustech</fullName>
                <isActive>false</isActive>
                <label>Geneustech</label>
            </value>
            <value>
                <fullName>Me Instruments</fullName>
                <isActive>false</isActive>
                <label>Me Instruments</label>
            </value>
            <value>
                <fullName>One-Chip</fullName>
                <isActive>false</isActive>
                <label>One-Chip</label>
            </value>
            <value>
                <fullName>Oxford Nanopore Technologies (ONT)</fullName>
                <label>Oxford Nanopore</label>
            </value>
            <value>
                <fullName>PacBio</fullName>
                <default>true</default>
                <label>Pacific Biosciences</label>
            </value>
            <value>
                <fullName>Qiagen</fullName>
                <isActive>false</isActive>
                <label>Qiagen</label>
            </value>
            <value>
                <fullName>QITAN</fullName>
                <isActive>false</isActive>
                <label>QITAN</label>
            </value>
            <value>
                <fullName>Roche / Kapa / Nimblegen</fullName>
                <isActive>false</isActive>
                <label>Roche / Kapa / Nimblegen</label>
            </value>
            <value>
                <fullName>Salus</fullName>
                <isActive>false</isActive>
                <label>Salus</label>
            </value>
            <value>
                <fullName>Singular Genomics</fullName>
                <label>Singular</label>
            </value>
            <value>
                <fullName>Sophia Genetics</fullName>
                <isActive>false</isActive>
                <label>Sophia Genetics</label>
            </value>
            <value>
                <fullName>Thermo Fisher</fullName>
            </value>
            <value>
                <fullName>Ultima Genomics</fullName>
                <label>Ultima</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>