force-app/main/default/objects/CCT_ProductName__mdt/fields/Product_Category_1__c.field-meta.xml
<CustomField>
    <fullName>Product_Category_1__c</fullName>
    <label>Product Category 1</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Instrument</fullName>
                <default>true</default>
                <label>Instrument</label>
            </value>
            <value>
                <fullName>Informatics</fullName>
            </value>
            <value>
                <fullName>Library Prep</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>