force-app/main/default/objects/CCT_ProductName__mdt/listViews/CCT_Product_Name_All.listView-meta.xml
<ListView>
    <fullName>CCT_Product_Name_All</fullName>
    <columns>MasterLabel</columns>
    <columns>Competitor_Name__c</columns>
    <columns>Product_Category_1__c</columns>
    <columns>Product_Name__c</columns>
    <columns>Enable__c</columns>
    <filterScope>Everything</filterScope>
    <label>CCT Product Name All</label>
    <language>en_US</language>
</ListView>